--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -10,7 +10,7 @@
         {% endblock %}
 
     </head>
-    <body>
+    <body class="bg-custom ">
         {% block body %}{% endblock %}
     </body>
     {% block javascripts %}
